k8s/traefik/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-api
spec:
  type: ClusterIP
  selector:
    "app.kubernetes.io/instance": "traefik-traefik"
    "app.kubernetes.io/name": "traefik"
  ports:
    - port: 9000
      name: traefik
      targetPort: 9000
      protocol: TCP
