k8s/traefik/templates/argo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.anshulg.com`)
      priority: 10
      middlewares:
        - name: security-headers
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
    - kind: Rule
      match: Host(`argocd.anshulg.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      middlewares:
        - name: security-headers
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-tls
    domains:
      - main: argocd.anshulg.com
