k8s/traefik/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: ipv4-cluster-ip
    networking.gke.io/managed-certificates: managed-cert
spec:
  defaultBackend:
    service:
      name: traefik
      port:
        name: websecure
